--- a/apps/example/index.html
+++ b/apps/example/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
+        <script src="http://localhost:8001/index.js"></script>
         <script src="http://localhost:8000/index.js"></script>
-        <!-- <script src="http://localhost:8081/index.js"></script> -->
         <!-- <script src="/context.js"></script> -->
         <!-- <script src="/subscribe.js"></script> -->
         <!-- <script src="/publish.js"></script> -->
